--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/nav_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/profile"
+        android:src="@drawable/default_profile"
         app:border_width="2dp"
         app:border_color="#FFF"/>
 
