--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -27,9 +27,9 @@
                 android:id="@+id/message_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/profile"
+                android:src="@drawable/default_profile"
                 app:border_width="2dp"
-                app:border_color="#FFF"/>
+                app:border_color="#61E24C"/>
 
             <LinearLayout
                 android:orientation="vertical"
