--- a/app/src/main/res/layout/fragment_pending_booking.xml
+++ b/app/src/main/res/layout/fragment_pending_booking.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:padding="5dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.android.volley.toolbox.NetworkImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pending_image"
             android:layout_width="100dp"
