--- a/app/src/main/res/layout/guide_profile.xml
+++ b/app/src/main/res/layout/guide_profile.xml
@@ -124,4 +124,16 @@
             android:textAppearance="?android:attr/textAppearanceSmall"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reviews:"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/guide_prof_review_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
