--- a/app/src/main/res/layout/rate_review.xml
+++ b/app/src/main/res/layout/rate_review.xml
@@ -48,17 +48,27 @@
             android:textColor="#07c"
             android:textSize="15dp"/>
 
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/rate_rev_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
         <RatingBar
             android:id="@+id/rate_bar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"/>
 
         <EditText
             android:id="@+id/review_text"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:hint="Write a review..."
+            android:inputType="textMultiLine"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
