--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#61E24C</color>
     <color name="colorPrimaryDark">#3DD022</color>
     <color name="colorAccent">#61E24C</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
