--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -4,4 +4,7 @@
     <solid android:color="#FFFFFF"/>
     <corners
         android:radius="5dp"/>
+    <stroke android:width="1dp"
+        android:color="#ff000000"
+        />
 </shape>
