--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="2dp">
+    android:paddingBottom="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,8 +22,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/text_background"
+        android:layout_height="wrap_content"
         android:paddingLeft="16dp">
 
         <TextView
@@ -31,14 +30,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Android Studio"
+            android:textSize="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#000"/>
+            android:textColor="#fff"
+            style="@style/AudioFileInfoOverlayText"/>
 
         <TextView
             android:id="@+id/nav_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="android.studio@android.com"
-            android:textColor="#000"/>
+            android:textSize="15dp"
+            android:textColor="#fff"
+            style="@style/AudioFileInfoOverlayText"/>
     </LinearLayout>
 </LinearLayout>
