--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,5 +5,4 @@
     android:textSize="20sp"
     android:gravity="left"
     android:textColor="#000000"
-    android:padding="10dp"
-    android:background="@drawable/rounded_edittext"/>
+    android:padding="10dp"/>
