--- a/app/src/main/res/layout/create_tour.xml
+++ b/app/src/main/res/layout/create_tour.xml
@@ -3,78 +3,82 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
-    
-    <ImageView
-        android:id="@+id/itinerary_image"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:minHeight="150dp"
-        android:background="@drawable/add_main_image"/>
+    android:background="#fff">
 
-    <EditText
-        android:id="@+id/itinerary_title"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/rounded_edittext"
-        android:layout_marginTop="10dp"
-        android:hint="Title"
-        android:singleLine="true"/>
-
-    <EditText
-        android:id="@+id/itinerary_desc"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Tour Description"
-        android:gravity="top"
-        android:padding="10dp"/>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp">
+        android:padding="15dp">
 
         <LinearLayout
-            android:id="@+id/image_holder"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="left">
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/itinerary_add_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="right"
-                android:background="@drawable/add_image"/>
-        </LinearLayout>
-    </HorizontalScrollView>
+                android:id="@+id/itinerary_image"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:minHeight="150dp"
+                android:background="@drawable/add_main_image"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-
-
-            <Button
-                android:id="@+id/itinerary_btnNext"
+            <EditText
+                android:id="@+id/itinerary_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Next"
-                android:background="@drawable/rounded_button"
-                android:elevation="4dp"
-                android:textColor="#fff"/>
+                android:padding="10dp"
+                android:background="@drawable/rounded_edittext"
+                android:layout_marginTop="10dp"
+                android:hint="Title"
+                android:singleLine="true"/>
 
+            <EditText
+                android:id="@+id/itinerary_desc"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rounded_edittext"
+                android:hint="Tour Description"
+                android:gravity="top"
+                android:padding="10dp"/>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="20dp">
+
+                <LinearLayout
+                    android:id="@+id/image_holder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="left">
+
+                    <ImageView
+                        android:id="@+id/itinerary_add_image"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="right"
+                        android:background="@drawable/add_image"/>
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="25dp">
+
+                <Button
+                    android:id="@+id/itinerary_btnNext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Next"
+                    android:background="@drawable/rounded_button"
+                    android:elevation="4dp"
+                    android:textColor="#fff"/>
+
+            </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
-
+    </ScrollView>
 </LinearLayout>
