--- a/app/src/main/res/layout/traveler_profile.xml
+++ b/app/src/main/res/layout/traveler_profile.xml
@@ -6,83 +6,94 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/traveler_profile_cover"
-            android:layout_width="match_parent"
-            android:layout_height="177dp"
-            android:background="@drawable/background"
-            android:gravity="bottom"
             android:orientation="vertical"
-            android:paddingBottom="2dp">
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="135dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/traveler_profile_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/default_profile"
-                app:border_width="2dp"
-                app:border_color="#61E24C"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/traveler_profile_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="177dp"
+                    android:background="@drawable/background"
+                    android:gravity="bottom"
+                    android:orientation="vertical"
+                    android:paddingBottom="2dp">
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="135dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/traveler_profile_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/default_profile"
+                        app:border_width="2dp"
+                        app:border_color="#61E24C"/>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="15dp">
+
+                        <TextView
+                            android:id="@+id/traveler_profile_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="Full Name Here"
+                            android:layout_marginTop="40dp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:id="@+id/traveler_profile_age"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="Age Here"
+                            android:textStyle="italic"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center_vertical"
-                android:paddingLeft="15dp">
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="10dp">
 
-                <TextView
-                    android:id="@+id/traveler_profile_name"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Full Name Here"
-                    android:layout_marginTop="40dp"
-                    android:textStyle="bold"/>
+                    android:src="@drawable/profile_points"/>
 
                 <TextView
-                    android:id="@+id/traveler_profile_age"
+                    android:id="@+id/traveler_points"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Age Here"
-                    android:textStyle="italic"/>
+                    android:layout_marginLeft="25dp"
+                    android:text="Points"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
             </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="10dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/profile_points"/>
-
-        <TextView
-            android:id="@+id/traveler_points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text="Points"
-            android:textAppearance="?android:attr/textAppearanceSmall"/>
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
