--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3DD022</color>
     <color name="colorAccent">#61E24C</color>
     <color name="yellow">#FFFF00</color>
+    <color name="white">#FFF</color>
 </resources>
