--- a/app/src/main/res/layout/create_tour.xml
+++ b/app/src/main/res/layout/create_tour.xml
@@ -67,7 +67,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="25dp">
+                android:layout_marginTop="25dp">
 
                 <Button
                     android:id="@+id/itinerary_btnNext"
