--- a/app/src/main/res/layout/fragment_complete_tour.xml
+++ b/app/src/main/res/layout/fragment_complete_tour.xml
@@ -103,8 +103,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="25dp">
+                android:layout_marginTop="30dp">
 
                 <Button
                     android:id="@+id/upcoming_complete"
