--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -73,8 +73,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="25dp">
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="20dp">
 
                 <Button
                     android:id="@+id/new_travel_next"
