--- a/app/src/main/res/layout/fragment_trip_detials.xml
+++ b/app/src/main/res/layout/fragment_trip_detials.xml
@@ -111,9 +111,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="25dp">
-
+                android:layout_marginTop="40dp">
 
                 <Button
                     android:id="@+id/detail_book"
