--- a/app/src/main/res/layout/guide_profile.xml
+++ b/app/src/main/res/layout/guide_profile.xml
@@ -47,7 +47,7 @@
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:paddingLeft="15dp">
 
@@ -161,7 +161,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reviews:"
+                android:text="User Reviews:"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
