--- a/app/src/main/res/layout/create_tour.xml
+++ b/app/src/main/res/layout/create_tour.xml
@@ -7,13 +7,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="15dp">
 
             <ImageView
                 android:id="@+id/itinerary_image"
