--- a/app/src/main/res/layout/fragment_pending_booking.xml
+++ b/app/src/main/res/layout/fragment_pending_booking.xml
@@ -44,7 +44,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:paddingLeft="10dp">
 
