--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -76,6 +76,7 @@
 
                 <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                     xmlns:rsb="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/range_seekbar"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="-15dp"
