--- a/app/src/main/res/menu/drawer_layout_drawer.xml
+++ b/app/src/main/res/menu/drawer_layout_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/scheds"
             android:title="My Trips" />
         <item
+            android:id="@+id/nav_redeem"
+            android:icon="@drawable/scheds"
+            android:title="Redeem Points" />
+        <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/messages"
             android:title="Messages" />
